--- a/demos/demo01/index.html
+++ b/demos/demo01/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="example"></div>
     <script type="text/babel">
+      {/*Render JSX*/}
       ReactDOM.render(
         <h1>Hello, world!</h1>,
         document.getElementById('example')
