--- a/demos/demo05/index.html
+++ b/demos/demo05/index.html
@@ -8,6 +8,8 @@
   <body>
     <div id="example"></div>
     <script type="text/babel">
+      {/*this.props.children*/}
+
       var NotesList_ES5 = React.createClass({
         render: function() {
           return (
