--- a/demos/demo06/index.html
+++ b/demos/demo06/index.html
@@ -8,7 +8,8 @@
   <body>
     <div id="example"></div>
     <script type="text/babel">
-
+      {/*this.props.children*/}
+      
       const data = "标题";
 
       var MyTitle_ES5 = React.createClass({
