--- a/demos/demo07/index.html
+++ b/demos/demo07/index.html
@@ -8,6 +8,8 @@
   <body>
     <div id="example"></div>
     <script type="text/babel">
+      {/*Finding a DOM node--this.refs.[refName]*/}
+
       var MyComponent_ES5 = React.createClass({
         handleClick: function() {
           this.refs.myTextInput.focus();
