--- a/demos/demo03/index.html
+++ b/demos/demo03/index.html
@@ -8,14 +8,14 @@
   <body>
     <div id="example"></div>
     <script type="text/babel">
-      var names = ['Alice', 'Emily', 'Kate'];
+      {/*Use array in JSX*/}
 
+      var arr = [
+        <h1 key="1">Hello world!</h1>,
+        <h2 key="2">Welcome to React!</h2>,
+      ];
       ReactDOM.render(
-        <div>
-        {
-          names.map((name, index) => <div key={index}>Hello, {name}!</div>)
-        }
-        </div>,
+        <div>{arr}</div>,
         document.getElementById('example')
       );
     </script>
